--- a/chat.html
+++ b/chat.html
@@ -102,7 +102,7 @@
       </div>
     </div>
     <div class="bigScreen">
-      <span class="begScreen__text">Please make your screen small! T.T </span>
+      <span class="begScreen__text">Please make your screen small! T.T 🐌</span>
     </div>
   </body>
 </html>
