--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       </ul>
     </nav>
     <div class="bigScreen">
-      <span class="begScreen__text">Please make your screen small! T.T </span>
+      <span class="begScreen__text">Please make your screen small! T.T 🐌</span>
     </div>
   </body>
 </html>
