--- a/settings.html
+++ b/settings.html
@@ -94,7 +94,7 @@
       </section>
     </main>
     <div class="bigScreen">
-      <span class="begScreen__text">Please make your screen small! T.T </span>
+      <span class="begScreen__text">Please make your screen small! T.T 🐌</span>
     </div>
   </body>
 </html>
